fix curve persistence issue; add options action;
